Fix compiler testing